horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_overview_empty.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    HORUS TUI v0.1.9 | LIVE | Nodes: 0 | Topics: 0                                    │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Active Nodes (0) - Use Left/Right to switch panels────────────────────────────────────────────────────────────────────┐
│   Name                                                                                          PID      Memory      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Active Topics (0) - Use Left/Right to switch panels───────────────────────────────────────────────────────────────────┐
│Topic                             Type                     Pub (N:Node)            Sub (N:Node)             Rate      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                           [TAB] Switch Tab | [↑↓] Navigate | [P] Pause | [?] Help | [Q] Quit
