horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_overview_populated.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    HORUS TUI v0.1.9 | LIVE | Nodes: 5 | Topics: 4                                    │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Active Nodes (5) - Use Left/Right to switch panels────────────────────────────────────────────────────────────────────┐
│    Name                                                                                         PID      Memory      │
│ ○  lidar_driver                                                                                 1001     48.0MB      │
│ ○  planner                                                                                      1002     128.0MB     │
│ ○  motor_controller                                                                             1003     16.0MB      │
│ ○  camera_node                                                                                  1004     256.0MB     │
│ ○  safety_monitor                                                                               1005     8.0MB       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Active Topics (4) - Use Left/Right to switch panels───────────────────────────────────────────────────────────────────┐
│Topic                             Type                     Pub (N:Node)            Sub (N:Node)             Rate      │
│scan                              LaserScan                1:lidar_driver          2:planner                40.0 Hz   │
│cmd_vel                           CmdVel                   1:planner               2:motor_controller       100.0 Hz  │
│odom                              Odometry                 1:motor_controller      2:planner                50.0 Hz   │
│image                             Image                    1:camera_node           -                        0.0 Hz    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                           [TAB] Switch Tab | [↑↓] Navigate | [P] Pause | [?] Help | [Q] Quit
