horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_overview_tiny_terminal.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────┐
│HORUS TUI v0.1.9 | LIVE | Nodes: 5 | T│
│ Overview  |  Nodes  |  Topics  |  Tra│
└──────────────────────────────────────┘
┌Active Nodes (5) - Use Left/Right to s┐
│   Name                           PI M│
└──────────────────────────────────────┘
┌Active Topics (4) - Use Left/Right to ┐
│Topic  Type   Pub (N Sub (N Rate      │
└──────────────────────────────────────┘
[TAB] Switch Tab | [↑↓] Navigate | [P] P
